objects/PT_Note__c.object
<CustomObject>
    <fields>
        <fullName>L2I_External_Migration_Id__c</fullName>
        <description>This field is used for data migration to populate Note ID</description>
        <externalId>true</externalId>
        <label>L2I_External_Migration_Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PT_Approval_Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Delete_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No longer available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Note_Name__c</fullName>
        <label>Note Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Notes__c</fullName>
        <label>Pending Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Rev_Note_Added__c</fullName>
        <label>Rev Note Added</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Rev_Note_Deleted__c</fullName>
        <label>Rev Note Deleted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Revision_Notes__c</fullName>
        <label>Revision Notes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Part List Note</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part List Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_Longer_Available_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( $Profile.Name  = &#39;System Administrator&#39; , false,  IF( ISCHANGED( PT_Delete_Note__c )  &amp;&amp;  PT_Delete_Note__c = false, true, false) )</errorConditionFormula>
        <errorMessage>Notes that are no longer available cannot be restored.
Please contact System Administrator for assistance.</errorMessage>
    </validationRules>
</CustomObject>